version/0.11/_sources/_autosummary/ansys.api.pyensight.ens_part_aux_geom.ENS_PART_AUX_GEOM.rst.txt
ENS\_PART\_AUX\_GEOM
====================

.. currentmodule:: ansys.api.pyensight.ens_part_aux_geom

.. autoclass:: ENS_PART_AUX_GEOM

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_AUX_GEOM.addchild
      
      
      ENS_PART_AUX_GEOM.attrgroupinfo
      
      
      ENS_PART_AUX_GEOM.attrinfo
      
      
      ENS_PART_AUX_GEOM.attrissensitive
      
      
      ENS_PART_AUX_GEOM.attrtree
      
      
      ENS_PART_AUX_GEOM.cmdlang_rec_info
      
      
      ENS_PART_AUX_GEOM.createpart
      
      
      ENS_PART_AUX_GEOM.destroy
      
      
      ENS_PART_AUX_GEOM.get_values
      
      
      ENS_PART_AUX_GEOM.getattr
      
      
      ENS_PART_AUX_GEOM.getattrs
      
      
      ENS_PART_AUX_GEOM.getmetatag
      
      
      ENS_PART_AUX_GEOM.hasmetatag
      
      
      ENS_PART_AUX_GEOM.highlight_part
      
      
      ENS_PART_AUX_GEOM.realtimemode
      
      
      ENS_PART_AUX_GEOM.removechild
      
      
      ENS_PART_AUX_GEOM.setattr
      
      
      ENS_PART_AUX_GEOM.setattr_begin
      
      
      ENS_PART_AUX_GEOM.setattr_end
      
      
      ENS_PART_AUX_GEOM.setattr_status
      
      
      ENS_PART_AUX_GEOM.setattrs
      
      
      ENS_PART_AUX_GEOM.setmetatag
      
      
      ENS_PART_AUX_GEOM.simba_get_values
      
      
      ENS_PART_AUX_GEOM.simba_tracepaths
      
      
      ENS_PART_AUX_GEOM.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_AUX_GEOM.ACTIVE
      ENS_PART_AUX_GEOM.ADJCOORDSCALEFACTOR
      ENS_PART_AUX_GEOM.ADJCOORDTRANSVEC
      ENS_PART_AUX_GEOM.ADJCOORDVARSCALEFACTOR
      ENS_PART_AUX_GEOM.ADJCOORDXVARIABLE
      ENS_PART_AUX_GEOM.ADJCOORDYVARIABLE
      ENS_PART_AUX_GEOM.ADJCOORDZVARIABLE
      ENS_PART_AUX_GEOM.ALPHABY
      ENS_PART_AUX_GEOM.ALPHABYPALETTE
      ENS_PART_AUX_GEOM.BOUNDINGREP
      ENS_PART_AUX_GEOM.CASENUMBER
      ENS_PART_AUX_GEOM.CHILDREN
      ENS_PART_AUX_GEOM.CLIP
      ENS_PART_AUX_GEOM.COLORBYPALETTE
      ENS_PART_AUX_GEOM.COLORBYRGB
      ENS_PART_AUX_GEOM.CULLELEMENTS
      ENS_PART_AUX_GEOM.DESCRIPTION
      ENS_PART_AUX_GEOM.DISPLACEBY
      ENS_PART_AUX_GEOM.DISPLACEFACTOR
      ENS_PART_AUX_GEOM.DOUBLESIDED
      ENS_PART_AUX_GEOM.DTA_BLOCK
      ENS_PART_AUX_GEOM.EDIT_TARGET
      ENS_PART_AUX_GEOM.ELTBLANKING
      ENS_PART_AUX_GEOM.ELTDEFINEDBY
      ENS_PART_AUX_GEOM.ELTFEATUREANGLE
      ENS_PART_AUX_GEOM.ELTFILTER1ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER1TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER1TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER1TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER1TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER1VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER1VARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER2ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER2LOGICALOP
      ENS_PART_AUX_GEOM.ELTFILTER2TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER2TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER2TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER2TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER2VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER2VARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER3ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER3LOGICALOP
      ENS_PART_AUX_GEOM.ELTFILTER3TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER3TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER3TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER3TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER3VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER3VARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER4ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER4LOGICALOP
      ENS_PART_AUX_GEOM.ELTFILTER4TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER4TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER4TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER4TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER4VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER4VARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER5ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER5LOGICALOP
      ENS_PART_AUX_GEOM.ELTFILTER5TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER5TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER5TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER5TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER5VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER5VARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER6ACTIVE
      ENS_PART_AUX_GEOM.ELTFILTER6LOGICALOP
      ENS_PART_AUX_GEOM.ELTFILTER6TESTOP
      ENS_PART_AUX_GEOM.ELTFILTER6TESTVALUE
      ENS_PART_AUX_GEOM.ELTFILTER6TESTVARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER6TESTVARIABLE
      ENS_PART_AUX_GEOM.ELTFILTER6VARCOMP
      ENS_PART_AUX_GEOM.ELTFILTER6VARIABLE
      ENS_PART_AUX_GEOM.ELTREPPOINTSNORMALS
      ENS_PART_AUX_GEOM.ELTREPRESENTATION
      ENS_PART_AUX_GEOM.ELTSHRINKFACTOR
      ENS_PART_AUX_GEOM.ENS_DETAILS
      ENS_PART_AUX_GEOM.ENS_KIND
      ENS_PART_AUX_GEOM.ENS_MATERIAL
      ENS_PART_AUX_GEOM.ENS_PARENT_PART
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_0
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_1
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_2
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_3
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_4
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_5
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_6
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_7
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_8
      ENS_PART_AUX_GEOM.ENS_PLIST_KEY_SEL_9
      ENS_PART_AUX_GEOM.ENS_SYMMETRY_AXIS
      ENS_PART_AUX_GEOM.ENS_SYMMETRY_COUNT
      ENS_PART_AUX_GEOM.ENS_TURBO_STAGE
      ENS_PART_AUX_GEOM.ENS_TURBO_VDIM
      ENS_PART_AUX_GEOM.ENS_TURBO_VIEW
      ENS_PART_AUX_GEOM.ENS_UNITS_LABEL
      ENS_PART_AUX_GEOM.ENTITYLABELELT
      ENS_PART_AUX_GEOM.ENTITYLABELNODE
      ENS_PART_AUX_GEOM.FILLPATTERN
      ENS_PART_AUX_GEOM.FLUENTTEXTUREAXIS
      ENS_PART_AUX_GEOM.FLUENTTEXTUREROTANGLE
      ENS_PART_AUX_GEOM.FLUENTTEXTURESCALE
      ENS_PART_AUX_GEOM.HANDLES_ENABLED
      ENS_PART_AUX_GEOM.HAS0DELEMENTS
      ENS_PART_AUX_GEOM.HAS1DELEMENTS
      ENS_PART_AUX_GEOM.HAS2DELEMENTS
      ENS_PART_AUX_GEOM.HAS3DELEMENTS
      ENS_PART_AUX_GEOM.HIDDENLINE
      ENS_PART_AUX_GEOM.HIDDENSURFACE
      ENS_PART_AUX_GEOM.IJKAXIS
      ENS_PART_AUX_GEOM.IJKAXISSCALE
      ENS_PART_AUX_GEOM.ISGROUP
      ENS_PART_AUX_GEOM.LIGHTAMBIENT
      ENS_PART_AUX_GEOM.LIGHTDIFFUSE
      ENS_PART_AUX_GEOM.LIGHTEMISSIVE
      ENS_PART_AUX_GEOM.LIGHTREFRACTION
      ENS_PART_AUX_GEOM.LIGHTSPECULARINTENSITY
      ENS_PART_AUX_GEOM.LIGHTSPECULARREFLECTION
      ENS_PART_AUX_GEOM.LIGHTSPECULARSHINE
      ENS_PART_AUX_GEOM.LIGHTSPECULARTINT
      ENS_PART_AUX_GEOM.LINESTYLE
      ENS_PART_AUX_GEOM.LINEWIDTH
      ENS_PART_AUX_GEOM.LPARTPARENT
      ENS_PART_AUX_GEOM.MATERIALBASETYPE
      ENS_PART_AUX_GEOM.MATERIALDESCRIPTION
      ENS_PART_AUX_GEOM.MESHRESOLUTION
      ENS_PART_AUX_GEOM.MESHTYPE
      ENS_PART_AUX_GEOM.METADATA
      ENS_PART_AUX_GEOM.MIRRORORIGINAL
      ENS_PART_AUX_GEOM.NODEDETAIL
      ENS_PART_AUX_GEOM.NODEORIENTATIONANGLE
      ENS_PART_AUX_GEOM.NODEORIENTATIONAXIS
      ENS_PART_AUX_GEOM.NODERANGESTEPI
      ENS_PART_AUX_GEOM.NODERANGESTEPJ
      ENS_PART_AUX_GEOM.NODERANGESTEPK
      ENS_PART_AUX_GEOM.NODESCALE
      ENS_PART_AUX_GEOM.NODESIZEBY
      ENS_PART_AUX_GEOM.NODETYPE
      ENS_PART_AUX_GEOM.NODEVARIABLE
      ENS_PART_AUX_GEOM.NORMALSPOINT
      ENS_PART_AUX_GEOM.OPAQUENESS
      ENS_PART_AUX_GEOM.ORIGIN
      ENS_PART_AUX_GEOM.PARENT
      ENS_PART_AUX_GEOM.PARTNUMBER
      ENS_PART_AUX_GEOM.PARTNUMELE
      ENS_PART_AUX_GEOM.PARTNUMELECLIENT
      ENS_PART_AUX_GEOM.PARTTYPE
      ENS_PART_AUX_GEOM.PARTTYPEENUM
      ENS_PART_AUX_GEOM.PATHNAME
      ENS_PART_AUX_GEOM.PERIODICSECTIONS
      ENS_PART_AUX_GEOM.PREDEFINEDMATERIAL
      ENS_PART_AUX_GEOM.PROJECT_MASK
      ENS_PART_AUX_GEOM.REDUCEPOLYGONS
      ENS_PART_AUX_GEOM.REDUCEPOLYGONSFACTOR
      ENS_PART_AUX_GEOM.REFFRAME
      ENS_PART_AUX_GEOM.RENDERINGREFLECTIONID
      ENS_PART_AUX_GEOM.REVERSENORMAL
      ENS_PART_AUX_GEOM.SELECTED
      ENS_PART_AUX_GEOM.SHADING
      ENS_PART_AUX_GEOM.SHOWOUTLINE
      ENS_PART_AUX_GEOM.SHOWPLANEXMAX
      ENS_PART_AUX_GEOM.SHOWPLANEXMIN
      ENS_PART_AUX_GEOM.SHOWPLANEYMAX
      ENS_PART_AUX_GEOM.SHOWPLANEYMIN
      ENS_PART_AUX_GEOM.SHOWPLANEZMAX
      ENS_PART_AUX_GEOM.SHOWPLANEZMIN
      ENS_PART_AUX_GEOM.SHOWSFT
      ENS_PART_AUX_GEOM.SIZE
      ENS_PART_AUX_GEOM.SOURCES
      ENS_PART_AUX_GEOM.SPECIFYSYMMETRYORIGIN
      ENS_PART_AUX_GEOM.SYMMETRYANGLE
      ENS_PART_AUX_GEOM.SYMMETRYAXIS
      ENS_PART_AUX_GEOM.SYMMETRYDELTA
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORX
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORXY
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORXYZ
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORXZ
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORY
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORYZ
      ENS_PART_AUX_GEOM.SYMMETRYMIRRORZ
      ENS_PART_AUX_GEOM.SYMMETRYORIGIN
      ENS_PART_AUX_GEOM.SYMMETRYRINSTANCES
      ENS_PART_AUX_GEOM.SYMMETRYTYPE
      ENS_PART_AUX_GEOM.TEXTURECOORDTYPE
      ENS_PART_AUX_GEOM.TEXTUREINTERPOLATION
      ENS_PART_AUX_GEOM.TEXTUREMODE
      ENS_PART_AUX_GEOM.TEXTUREOBJECT
      ENS_PART_AUX_GEOM.TEXTUREORIGIN
      ENS_PART_AUX_GEOM.TEXTUREORIGINNODEID
      ENS_PART_AUX_GEOM.TEXTUREORIGINUSE
      ENS_PART_AUX_GEOM.TEXTUREREPEATMODE
      ENS_PART_AUX_GEOM.TEXTURESORIGINNODEID
      ENS_PART_AUX_GEOM.TEXTURESVARIABLE
      ENS_PART_AUX_GEOM.TEXTURESVECTOR
      ENS_PART_AUX_GEOM.TEXTURETORIGINNODEID
      ENS_PART_AUX_GEOM.TEXTURETVARIABLE
      ENS_PART_AUX_GEOM.TEXTURETVECTOR
      ENS_PART_AUX_GEOM.TYPE
      ENS_PART_AUX_GEOM.USEDOUBLESIDEDWALLS
      ENS_PART_AUX_GEOM.UUID
      ENS_PART_AUX_GEOM.VDBMESHADAPTIVITY
      ENS_PART_AUX_GEOM.VDBMESHOFFSET
      ENS_PART_AUX_GEOM.VDBNARROWBANDSIZE
      ENS_PART_AUX_GEOM.VDBVOXELSIZERATIO
      ENS_PART_AUX_GEOM.VIEWPORTVIS
      ENS_PART_AUX_GEOM.VISIBILITYELT
      ENS_PART_AUX_GEOM.VISIBILITYLINE
      ENS_PART_AUX_GEOM.VISIBILITYNODE
      ENS_PART_AUX_GEOM.VISIBLE
      ENS_PART_AUX_GEOM.VOLUMEQUALITY
      ENS_PART_AUX_GEOM.VOLUMERENDERINGTYPE
      ENS_PART_AUX_GEOM.WALLTHICKNESS
      ENS_PART_AUX_GEOM.__OBJID__
      ENS_PART_AUX_GEOM.objid
   
   